# novel-reader

./: README.md  index.html  package-lock.json  package.json  迭代信息.md  迭代规划.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cover_cache.rs  database.rs  events.rs  file_operations.rs  lib.rs  library_scanner.rs  main.rs  md_parser.rs  pdf_text_extractor.rs  reading_stats.rs  search_engine.rs  settings.rs  sort_utils.rs  txt_parser.rs
src/components/: LibraryView.tsx  ReaderView.tsx  SettingsDialog.tsx
src/i18n/: translations.ts  useTranslation.ts
src/services/: databaseService.ts
src/stores/: mangaStore.ts
src/types/: sourceType.ts
