[package]
name = "novel-reader"
version = "0.2.0"
description = "A Novel Reader App built with Tauri"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
regex = "1"
rayon = "1.8"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
lopdf = "0.35"
chardetng = "0.1"
encoding_rs = "0.8"
pulldown-cmark = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_System_Com"] }

[profile.release]
opt-level = 3          # 最大优化
lto = "thin"           # 链接时优化
codegen-units = 1      # 减少编译单元数
panic = "unwind"       # 使用 unwind 避免某些杀软误报
strip = "none"          # 保留符号以减少误报（会增加 binary 大小）
# 如果不需要调试符号可以改为 strip = "debuginfo"
